Add SEO and Page Header compositions

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "appsettings-schema.json",
+  "$schema": "https://json.schemastore.org/appsettings.json",
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -13,25 +13,18 @@
   "Umbraco": {
     "CMS": {
       "Global": {
-        "Id": "be54838d-154f-4a23-91b6-1e517ada6904",
-        "SanitizeTinyMce": true
+        "SanitizeTinyMce": true,
+        "Id": "c90db309-7691-4ac5-a8c0-9c22e4fe8e63"
       },
       "Content": {
         "AllowEditInvariantFromNonDefault": true,
         "ContentVersionCleanupPolicy": {
           "EnableCleanup": true
         }
-      },
-      "Unattended": {
-        "UpgradeUnattended": true
-      },
-      "Security": {
-        "AllowConcurrentLogins": false
       }
     }
   },
   "ConnectionStrings": {
-    "umbracoDbDSN": "Server=localhost\\SQLEXPRESS;Database=OnatrixDB;Integrated Security=true;TrustServerCertificate=true;",
-    "umbracoDbDSN_ProviderName": "Microsoft.Data.SqlClient"
+    "umbracoDbDSN": "Server=localhost\\SQLEXPRESS;Database=OnatrixDB;Integrated Security=true;TrustServerCertificate=true;"
   }
 }
