Add last section in about

--- a/uSync/v16/Content/about.config
+++ b/uSync/v16/Content/about.config
@@ -503,6 +503,71 @@
           }
         }
       ]
+    },
+    {
+      "contentTypeKey": "4080e05a-9a1f-490d-beef-de74e5bdc0c0",
+      "key": "fac826a1-1ae3-4959-8101-9eea2819b9bb",
+      "udi": null,
+      "values": [
+        {
+          "alias": "headline",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "Let us know about your next project"
+        },
+        {
+          "alias": "officeLocation",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "Klarabergsviadukten 90, 111 52 Stockholm"
+        },
+        {
+          "alias": "phoneNumber",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "\u002B46 8 123 456 76"
+        },
+        {
+          "alias": "emailAddress",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "sales@onatrix.com"
+        },
+        {
+          "alias": "contactImage",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "9319ef08-8b24-4587-a5f1-8903604aa9bf",
+              "mediaKey": "03f811cf-50d4-42ee-865b-19d46a40ac28",
+              "mediaTypeAlias": "Image",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        },
+        {
+          "alias": "backgroundImage",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "30b83811-b603-4b97-8f62-e0b513964ffe",
+              "mediaKey": "261f9f91-817a-4bc3-976d-c03727e22bba",
+              "mediaTypeAlias": "Image",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        }
+      ]
     }
   ],
   "settingsData": [],
@@ -519,6 +584,11 @@
     },
     {
       "contentKey": "9b7f516a-663a-4ddb-9ae5-81db6260d339",
+      "culture": null,
+      "segment": null
+    },
+    {
+      "contentKey": "fac826a1-1ae3-4959-8101-9eea2819b9bb",
       "culture": null,
       "segment": null
     }
@@ -539,6 +609,12 @@
       },
       {
         "contentKey": "9b7f516a-663a-4ddb-9ae5-81db6260d339",
+        "contentUdi": null,
+        "settingsKey": null,
+        "settingsUdi": null
+      },
+      {
+        "contentKey": "fac826a1-1ae3-4959-8101-9eea2819b9bb",
         "contentUdi": null,
         "settingsKey": null,
         "settingsUdi": null
