Add Partner Logos component and configure uSync auto-import
- Add partnerLogosBlock view template with grayscale hover effect
- Add CSS styling for partner logos section
- Configure uSync for automatic import/export
- Update .gitignore to exclude appsettings.Development.json
- Add SQLite support in Onatrix.csproj
- Add partner logo media files and uSync configurations
- Update footer background color to #0e0e0e

--- a/uSync/v16/Content/home.config
+++ b/uSync/v16/Content/home.config
@@ -688,6 +688,63 @@
           ]
         }
       ]
+    },
+    {
+      "contentTypeKey": "d2eec13d-707a-44fd-a533-a9e40d7a0a17",
+      "key": "d8989f78-b85f-4f6e-9bb7-9ac12619c63f",
+      "udi": null,
+      "values": [
+        {
+          "alias": "partnerLogos",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "5c3570b1-ddfa-4ece-922d-e81ffde95485",
+              "mediaKey": "a3833470-7bd2-4d49-9889-bdfff693dfcf",
+              "mediaTypeAlias": "Image",
+              "crops": [],
+              "focalPoint": null
+            },
+            {
+              "key": "b3e56f0b-a024-4d52-8b0a-f6e647e7ca16",
+              "mediaKey": "965c19d7-5819-47bc-b6d7-6fe4ae089622",
+              "mediaTypeAlias": "",
+              "crops": [],
+              "focalPoint": null
+            },
+            {
+              "key": "edfee574-ab5d-476b-baf1-d954a04ad00a",
+              "mediaKey": "2bd278fd-904d-4879-8fbf-7092e9592153",
+              "mediaTypeAlias": "",
+              "crops": [],
+              "focalPoint": null
+            },
+            {
+              "key": "c33826ef-df1a-494a-8bce-ea44a053de67",
+              "mediaKey": "dd2cc386-54e5-49ec-a341-096084b4400b",
+              "mediaTypeAlias": "",
+              "crops": [],
+              "focalPoint": null
+            },
+            {
+              "key": "40915ffe-322f-4505-98ea-57779f6b9f26",
+              "mediaKey": "98d28cc6-1dfc-488f-aa8b-14a403b3e9fa",
+              "mediaTypeAlias": "",
+              "crops": [],
+              "focalPoint": null
+            },
+            {
+              "key": "bc5e39ed-ed47-47ba-b280-1806ab5f626f",
+              "mediaKey": "07e4c743-fbe4-416f-8b39-1c237dd88980",
+              "mediaTypeAlias": "",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        }
+      ]
     }
   ],
   "settingsData": [],
@@ -714,6 +771,11 @@
     },
     {
       "contentKey": "ec815c59-2a80-4762-a07b-0a7c6e3df409",
+      "culture": null,
+      "segment": null
+    },
+    {
+      "contentKey": "d8989f78-b85f-4f6e-9bb7-9ac12619c63f",
       "culture": null,
       "segment": null
     }
@@ -746,6 +808,12 @@
       },
       {
         "contentKey": "ec815c59-2a80-4762-a07b-0a7c6e3df409",
+        "contentUdi": null,
+        "settingsKey": null,
+        "settingsUdi": null
+      },
+      {
+        "contentKey": "d8989f78-b85f-4f6e-9bb7-9ac12619c63f",
         "contentUdi": null,
         "settingsKey": null,
         "settingsUdi": null
