Add Request Callback Form component
- Create requestCallbackBlock Element Type
- Add callback form view template with styling
- Add CSS for floating box and form elements
- Configure form fields: name, email, phone, service dropdown
- Add to HomePage Block List configuration
- Update content with form block in uSync

--- a/uSync/v16/Content/home.config
+++ b/uSync/v16/Content/home.config
@@ -710,39 +710,67 @@
             {
               "key": "b3e56f0b-a024-4d52-8b0a-f6e647e7ca16",
               "mediaKey": "965c19d7-5819-47bc-b6d7-6fe4ae089622",
-              "mediaTypeAlias": "",
+              "mediaTypeAlias": "Image",
               "crops": [],
               "focalPoint": null
             },
             {
               "key": "edfee574-ab5d-476b-baf1-d954a04ad00a",
               "mediaKey": "2bd278fd-904d-4879-8fbf-7092e9592153",
-              "mediaTypeAlias": "",
+              "mediaTypeAlias": "Image",
               "crops": [],
               "focalPoint": null
             },
             {
               "key": "c33826ef-df1a-494a-8bce-ea44a053de67",
               "mediaKey": "dd2cc386-54e5-49ec-a341-096084b4400b",
-              "mediaTypeAlias": "",
+              "mediaTypeAlias": "Image",
               "crops": [],
               "focalPoint": null
             },
             {
               "key": "40915ffe-322f-4505-98ea-57779f6b9f26",
               "mediaKey": "98d28cc6-1dfc-488f-aa8b-14a403b3e9fa",
-              "mediaTypeAlias": "",
+              "mediaTypeAlias": "Image",
               "crops": [],
               "focalPoint": null
             },
             {
               "key": "bc5e39ed-ed47-47ba-b280-1806ab5f626f",
               "mediaKey": "07e4c743-fbe4-416f-8b39-1c237dd88980",
-              "mediaTypeAlias": "",
+              "mediaTypeAlias": "Image",
               "crops": [],
               "focalPoint": null
             }
           ]
+        }
+      ]
+    },
+    {
+      "contentTypeKey": "081fd0ea-3db7-4449-a816-2a4822f532e4",
+      "key": "9bb7fe3f-0eb9-4aed-a547-deda0a8d60cd",
+      "udi": null,
+      "values": [
+        {
+          "alias": "formTitle",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "Request a call back"
+        },
+        {
+          "alias": "formDescription",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "Dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur excepteur sint occaecat"
+        },
+        {
+          "alias": "submitButtonText",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "Submit"
         }
       ]
     }
@@ -778,6 +806,11 @@
       "contentKey": "d8989f78-b85f-4f6e-9bb7-9ac12619c63f",
       "culture": null,
       "segment": null
+    },
+    {
+      "contentKey": "9bb7fe3f-0eb9-4aed-a547-deda0a8d60cd",
+      "culture": null,
+      "segment": null
     }
   ],
   "Layout": {
@@ -790,6 +823,12 @@
       },
       {
         "contentKey": "c86c6b8e-cd91-4d42-b00a-1c5934747d20",
+        "contentUdi": null,
+        "settingsKey": null,
+        "settingsUdi": null
+      },
+      {
+        "contentKey": "9bb7fe3f-0eb9-4aed-a547-deda0a8d60cd",
         "contentUdi": null,
         "settingsKey": null,
         "settingsUdi": null
