--- a/uSync/v16/Content/site-settings.config
+++ b/uSync/v16/Content/site-settings.config
@@ -36,7 +36,7 @@
   {
     "key": "93f414a6-5c6d-4000-8afc-8b65832045a8",
     "mediaKey": "ddd617d5-33be-4a88-bfc3-067002b4cd1e",
-    "mediaTypeAlias": "",
+    "mediaTypeAlias": "Image",
     "crops": [],
     "focalPoint": null
   }
