--- a/uSync/v16/DataTypes/homePagePageLayoutBlockListPropertyEditorUI.config
+++ b/uSync/v16/DataTypes/homePagePageLayoutBlockListPropertyEditorUI.config
@@ -24,6 +24,9 @@
     },
     {
       "contentElementTypeKey": "d2eec13d-707a-44fd-a533-a9e40d7a0a17"
+    },
+    {
+      "contentElementTypeKey": "081fd0ea-3db7-4449-a816-2a4822f532e4"
     }
   ]
 }]]></Config>
