--- a/appsettings.json
+++ b/appsettings.json
@@ -34,6 +34,19 @@
         "RebuildCacheOnCompletion": true,
         "FailOnMissingParent": false,
         "ImportAfterInstall": true
+      },
+      "Sets": {
+        "Default": {
+          "HandlerSets": [
+            {
+              "Name": "Content",
+              "Enabled": true,
+              "HandlerDefaults": {
+                "Enabled": true
+              }
+            }
+          ]
+        }
       }
     }
   },
