Export Services and Risk Management content for team sync

--- a/uSync/v16/ContentTypes/serviceitem.config
+++ b/uSync/v16/ContentTypes/serviceitem.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="6f0b42b5-8a46-48ea-9f3e-920446adfef2" Alias="modularPage" Level="1">
+<ContentType Key="3b29d726-d143-464b-82d2-7c9353e8a0cf" Alias="serviceItem" Level="1">
   <Info>
-    <Name>modularPage</Name>
-    <Icon>icon-document</Icon>
+    <Name>serviceItem</Name>
+    <Icon>icon-briefcase</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
-    <AllowAtRoot>True</AllowAtRoot>
+    <AllowAtRoot>False</AllowAtRoot>
     <ListView>c0808dd3-8133-4e4b-8ce8-e2bea84a96a4</ListView>
     <Variations>Nothing</Variations>
     <IsElement>false</IsElement>
@@ -18,27 +18,24 @@
       <Composition Key="87219e6d-7d6d-4364-a6b8-985b559c2633">pageHeaderComposition</Composition>
       <Composition Key="0499d8a5-07c9-494d-b06d-0a66b5044132">seoComposition</Composition>
     </Compositions>
-    <DefaultTemplate>modularPage</DefaultTemplate>
+    <DefaultTemplate>serviceItem</DefaultTemplate>
     <AllowedTemplates>
-      <Template Key="8dcd85ea-a0af-4437-ab2b-506f947dfb9b">modularPage</Template>
+      <Template Key="d27e103a-472d-4640-81bb-777f8c704227">serviceItem</Template>
     </AllowedTemplates>
   </Info>
-  <Structure>
-    <ContentType Key="6f0b42b5-8a46-48ea-9f3e-920446adfef2" SortOrder="0">modularPage</ContentType>
-    <ContentType Key="3b29d726-d143-464b-82d2-7c9353e8a0cf" SortOrder="1">serviceItem</ContentType>
-  </Structure>
+  <Structure />
   <GenericProperties>
     <GenericProperty>
-      <Key>bc82a3d0-b3ec-4c6d-b2db-e99678ee83a5</Key>
+      <Key>1896da48-7ba5-457b-ace3-f7b046fc3125</Key>
       <Name>Page Layout</Name>
       <Alias>pageLayout</Alias>
-      <Definition>68043b3c-6ceb-4921-b01b-32e56c4c23ff</Definition>
+      <Definition>c71fad3f-bb68-48be-a735-9560228c7870</Definition>
       <Type>Umbraco.BlockList</Type>
       <Mandatory>false</Mandatory>
       <Validation></Validation>
-      <Description><![CDATA[Flexible content blocks for the page]]></Description>
+      <Description><![CDATA[Flexible content blocks for service details]]></Description>
       <SortOrder>0</SortOrder>
-      <Tab Alias="pageContent">Page Content</Tab>
+      <Tab Alias="serviceContent">Service Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
       <ValidationRegExpMessage></ValidationRegExpMessage>
@@ -47,9 +44,9 @@
   </GenericProperties>
   <Tabs>
     <Tab>
-      <Key>e61a5fd7-8af9-48e6-bb76-246934ec1230</Key>
-      <Caption>Page Content</Caption>
-      <Alias>pageContent</Alias>
+      <Key>b3b83dff-3d94-452a-b740-01cbe56dba31</Key>
+      <Caption>Service Content</Caption>
+      <Alias>serviceContent</Alias>
       <Type>Group</Type>
       <SortOrder>1</SortOrder>
     </Tab>
