--- a/uSync/v16/DataTypes/modularPagePageLayoutBlockListPropertyEditorUI.config
+++ b/uSync/v16/DataTypes/modularPagePageLayoutBlockListPropertyEditorUI.config
@@ -39,6 +39,9 @@
     },
     {
       "contentElementTypeKey": "4080e05a-9a1f-490d-beef-de74e5bdc0c0"
+    },
+    {
+      "contentElementTypeKey": "b2066680-0f99-4e6d-8f4a-2e747bc99c25"
     }
   ]
 }]]></Config>
