--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -26,5 +26,9 @@
         "Debug": true
       }
     }
+  },
+  "ConnectionStrings": {
+    "umbracoDbDSN": "Data Source=|DataDirectory|/Umbraco.sqlite.db;Cache=Shared;Foreign Keys=True;Pooling=True",
+    "umbracoDbDSN_ProviderName": "Microsoft.Data.Sqlite"
   }
 }
