Complete Contact page with Google Maps integration and large contact form

--- a/uSync/v16/Content/services.config
+++ b/uSync/v16/Content/services.config
@@ -14,7 +14,7 @@
   </Info>
   <Properties>
     <metaDescription>
-      <Value><![CDATA[]]></Value>
+      <Value><![CDATA[Our Services - Onatrix Financial Solutions]]></Value>
     </metaDescription>
     <metaKeywords>
       <Value><![CDATA[]]></Value>
@@ -23,7 +23,449 @@
       <Value><![CDATA[Our Services - Onatrix Financial Solutions]]></Value>
     </metaTitle>
     <pageLayout>
-      <Value><![CDATA[]]></Value>
+      <Value><![CDATA[{
+  "contentData": [
+    {
+      "contentTypeKey": "8c3a8442-1aa6-4739-b5fb-dac58c89ed60",
+      "key": "a084252b-f6ed-46de-b54b-ab1e504023b1",
+      "udi": null,
+      "values": [
+        {
+          "alias": "sectionTitle",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "Our Services"
+        },
+        {
+          "alias": "services",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": {
+            "contentData": [
+              {
+                "contentTypeKey": "cd35901e-4a84-4acd-9470-e472137aa7e9",
+                "key": "951368a3-a2f3-499d-b649-25f2677673ea",
+                "udi": null,
+                "values": [
+                  {
+                    "alias": "serviceTitle",
+                    "culture": null,
+                    "editorAlias": null,
+                    "segment": null,
+                    "value": "Risk Management"
+                  },
+                  {
+                    "alias": "serviceDescription",
+                    "culture": null,
+                    "editorAlias": null,
+                    "segment": null,
+                    "value": "Dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non"
+                  },
+                  {
+                    "alias": "serviceImage",
+                    "culture": null,
+                    "editorAlias": null,
+                    "segment": null,
+                    "value": [
+                      {
+                        "key": "854f09fc-2b31-4efe-8dd8-84743c66958c",
+                        "mediaKey": "8a42081c-7a49-4228-aac7-f2dfabb2284f",
+                        "mediaTypeAlias": "Image",
+                        "crops": [],
+                        "focalPoint": null
+                      }
+                    ]
+                  },
+                  {
+                    "alias": "serviceLink",
+                    "culture": null,
+                    "editorAlias": null,
+                    "segment": null,
+                    "value": "umb://document/fb2cc473848b41678c2fc0303a550056"
+                  }
+                ]
+              },
+              {
+                "contentTypeKey": "cd35901e-4a84-4acd-9470-e472137aa7e9",
+                "key": "bdfe08ca-0371-417a-85a9-22339df0919a",
+                "udi": null,
+                "values": [
+                  {
+                    "alias": "serviceTitle",
+                    "culture": null,
+                    "editorAlias": null,
+                    "segment": null,
+                    "value": "Bonds \u0026 Commodities"
+                  },
+                  {
+                    "alias": "serviceDescription",
+                    "culture": null,
+                    "editorAlias": null,
+                    "segment": null,
+                    "value": "Dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non "
+                  },
+                  {
+                    "alias": "serviceImage",
+                    "culture": null,
+                    "editorAlias": null,
+                    "segment": null,
+                    "value": [
+                      {
+                        "key": "52100a43-abd6-42b0-96bf-2111d78733ec",
+                        "mediaKey": "eeadcefe-793c-4151-9c3e-a26c2433bcac",
+                        "mediaTypeAlias": "Image",
+                        "crops": [],
+                        "focalPoint": null
+                      }
+                    ]
+                  }
+                ]
+              },
+              {
+                "contentTypeKey": "cd35901e-4a84-4acd-9470-e472137aa7e9",
+                "key": "812be537-3a3d-4a34-8b92-11a5d0f0e50f",
+                "udi": null,
+                "values": [
+                  {
+                    "alias": "serviceTitle",
+                    "culture": null,
+                    "editorAlias": null,
+                    "segment": null,
+                    "value": "Assurance \u0026 Audits"
+                  },
+                  {
+                    "alias": "serviceImage",
+                    "culture": null,
+                    "editorAlias": null,
+                    "segment": null,
+                    "value": [
+                      {
+                        "key": "d6315107-32f8-4870-8d82-b973a177db44",
+                        "mediaKey": "7d218127-cca9-4944-bb48-b66158f734d3",
+                        "mediaTypeAlias": "Image",
+                        "crops": [],
+                        "focalPoint": null
+                      }
+                    ]
+                  },
+                  {
+                    "alias": "serviceDescription",
+                    "culture": null,
+                    "editorAlias": null,
+                    "segment": null,
+                    "value": "Dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non "
+                  }
+                ]
+              },
+              {
+                "contentTypeKey": "cd35901e-4a84-4acd-9470-e472137aa7e9",
+                "key": "a97ef757-4fb9-4a7b-9bfa-72b6cf4cea42",
+                "udi": null,
+                "values": [
+                  {
+                    "alias": "serviceTitle",
+                    "culture": null,
+                    "editorAlias": null,
+                    "segment": null,
+                    "value": "Tax and Trusts"
+                  },
+                  {
+                    "alias": "serviceImage",
+                    "culture": null,
+                    "editorAlias": null,
+                    "segment": null,
+                    "value": [
+                      {
+                        "key": "3e070fb1-428b-4cd5-ae7b-0438304f3a97",
+                        "mediaKey": "ecb5132f-6361-45ab-872e-4275b80cae43",
+                        "mediaTypeAlias": "Image",
+                        "crops": [],
+                        "focalPoint": null
+                      }
+                    ]
+                  },
+                  {
+                    "alias": "serviceDescription",
+                    "culture": null,
+                    "editorAlias": null,
+                    "segment": null,
+                    "value": "Dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non "
+                  }
+                ]
+              },
+              {
+                "contentTypeKey": "cd35901e-4a84-4acd-9470-e472137aa7e9",
+                "key": "5d4e9848-41c6-4bd1-98e3-0bd4b38b4784",
+                "udi": null,
+                "values": [
+                  {
+                    "alias": "serviceTitle",
+                    "culture": null,
+                    "editorAlias": null,
+                    "segment": null,
+                    "value": "Financial Advisor"
+                  },
+                  {
+                    "alias": "serviceImage",
+                    "culture": null,
+                    "editorAlias": null,
+                    "segment": null,
+                    "value": [
+                      {
+                        "key": "0b27d1a6-a602-4bc1-a015-f07d8e44ca49",
+                        "mediaKey": "c3d1147b-917d-437a-b7e2-ed462f73bbf9",
+                        "mediaTypeAlias": "Image",
+                        "crops": [],
+                        "focalPoint": null
+                      }
+                    ]
+                  },
+                  {
+                    "alias": "serviceDescription",
+                    "culture": null,
+                    "editorAlias": null,
+                    "segment": null,
+                    "value": "Dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non "
+                  }
+                ]
+              },
+              {
+                "contentTypeKey": "cd35901e-4a84-4acd-9470-e472137aa7e9",
+                "key": "05fe1750-bf81-4b19-b684-8139cd542c2a",
+                "udi": null,
+                "values": [
+                  {
+                    "alias": "serviceTitle",
+                    "culture": null,
+                    "editorAlias": null,
+                    "segment": null,
+                    "value": "Statistic Advisors"
+                  },
+                  {
+                    "alias": "serviceDescription",
+                    "culture": null,
+                    "editorAlias": null,
+                    "segment": null,
+                    "value": "Dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non "
+                  },
+                  {
+                    "alias": "serviceImage",
+                    "culture": null,
+                    "editorAlias": null,
+                    "segment": null,
+                    "value": [
+                      {
+                        "key": "b34c4b9f-91e0-4ef0-b8cf-d1b2c599c13f",
+                        "mediaKey": "6f3b1e66-5477-4bc9-a396-831536dc00f9",
+                        "mediaTypeAlias": "Image",
+                        "crops": [],
+                        "focalPoint": null
+                      }
+                    ]
+                  }
+                ]
+              }
+            ],
+            "settingsData": [],
+            "expose": [
+              {
+                "contentKey": "951368a3-a2f3-499d-b649-25f2677673ea",
+                "culture": null,
+                "segment": null
+              },
+              {
+                "contentKey": "bdfe08ca-0371-417a-85a9-22339df0919a",
+                "culture": null,
+                "segment": null
+              },
+              {
+                "contentKey": "812be537-3a3d-4a34-8b92-11a5d0f0e50f",
+                "culture": null,
+                "segment": null
+              },
+              {
+                "contentKey": "a97ef757-4fb9-4a7b-9bfa-72b6cf4cea42",
+                "culture": null,
+                "segment": null
+              },
+              {
+                "contentKey": "5d4e9848-41c6-4bd1-98e3-0bd4b38b4784",
+                "culture": null,
+                "segment": null
+              },
+              {
+                "contentKey": "05fe1750-bf81-4b19-b684-8139cd542c2a",
+                "culture": null,
+                "segment": null
+              }
+            ],
+            "Layout": {
+              "Umbraco.BlockList": [
+                {
+                  "contentKey": "951368a3-a2f3-499d-b649-25f2677673ea",
+                  "contentUdi": null,
+                  "settingsKey": null,
+                  "settingsUdi": null
+                },
+                {
+                  "contentKey": "bdfe08ca-0371-417a-85a9-22339df0919a",
+                  "contentUdi": null,
+                  "settingsKey": null,
+                  "settingsUdi": null
+                },
+                {
+                  "contentKey": "812be537-3a3d-4a34-8b92-11a5d0f0e50f",
+                  "contentUdi": null,
+                  "settingsKey": null,
+                  "settingsUdi": null
+                },
+                {
+                  "contentKey": "a97ef757-4fb9-4a7b-9bfa-72b6cf4cea42",
+                  "contentUdi": null,
+                  "settingsKey": null,
+                  "settingsUdi": null
+                },
+                {
+                  "contentKey": "5d4e9848-41c6-4bd1-98e3-0bd4b38b4784",
+                  "contentUdi": null,
+                  "settingsKey": null,
+                  "settingsUdi": null
+                },
+                {
+                  "contentKey": "05fe1750-bf81-4b19-b684-8139cd542c2a",
+                  "contentUdi": null,
+                  "settingsKey": null,
+                  "settingsUdi": null
+                }
+              ]
+            }
+          }
+        }
+      ]
+    },
+    {
+      "contentTypeKey": "060487d1-2e92-48c6-9ecd-2b275ff972cb",
+      "key": "caf1974f-475e-4e9e-9503-0c303fc07ba1",
+      "udi": null,
+      "values": [
+        {
+          "alias": "headline",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "We Provide The Solutions To Grow Your Business Faster"
+        }
+      ]
+    },
+    {
+      "contentTypeKey": "4080e05a-9a1f-490d-beef-de74e5bdc0c0",
+      "key": "e42c3f93-4ec8-4dc1-8470-2d069d9a76d3",
+      "udi": null,
+      "values": [
+        {
+          "alias": "headline",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "Let us know about your next project"
+        },
+        {
+          "alias": "officeLocation",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "Klarabergsviadukten 90, 111 52 Stockholm"
+        },
+        {
+          "alias": "phoneNumber",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "\u002B46 8 123 456 76"
+        },
+        {
+          "alias": "emailAddress",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "sales@onatrix.com"
+        },
+        {
+          "alias": "contactImage",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "6ad3c03d-a88c-4449-a04b-de77f203540d",
+              "mediaKey": "03f811cf-50d4-42ee-865b-19d46a40ac28",
+              "mediaTypeAlias": "",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        },
+        {
+          "alias": "backgroundImage",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "419e3a2a-2866-4aa7-bdac-2303cfa62ced",
+              "mediaKey": "261f9f91-817a-4bc3-976d-c03727e22bba",
+              "mediaTypeAlias": "",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        }
+      ]
+    }
+  ],
+  "settingsData": [],
+  "expose": [
+    {
+      "contentKey": "a084252b-f6ed-46de-b54b-ab1e504023b1",
+      "culture": null,
+      "segment": null
+    },
+    {
+      "contentKey": "caf1974f-475e-4e9e-9503-0c303fc07ba1",
+      "culture": null,
+      "segment": null
+    },
+    {
+      "contentKey": "e42c3f93-4ec8-4dc1-8470-2d069d9a76d3",
+      "culture": null,
+      "segment": null
+    }
+  ],
+  "Layout": {
+    "Umbraco.BlockList": [
+      {
+        "contentKey": "caf1974f-475e-4e9e-9503-0c303fc07ba1",
+        "contentUdi": null,
+        "settingsKey": null,
+        "settingsUdi": null
+      },
+      {
+        "contentKey": "a084252b-f6ed-46de-b54b-ab1e504023b1",
+        "contentUdi": null,
+        "settingsKey": null,
+        "settingsUdi": null
+      },
+      {
+        "contentKey": "e42c3f93-4ec8-4dc1-8470-2d069d9a76d3",
+        "contentUdi": null,
+        "settingsKey": null,
+        "settingsUdi": null
+      }
+    ]
+  }
+}]]></Value>
     </pageLayout>
     <pagePreamble>
       <Value><![CDATA[]]></Value>
