--- a/uSync/v16/DataTypes/modularPagePageLayoutBlockListPropertyEditorUI.config
+++ b/uSync/v16/DataTypes/modularPagePageLayoutBlockListPropertyEditorUI.config
@@ -42,6 +42,9 @@
     },
     {
       "contentElementTypeKey": "b2066680-0f99-4e6d-8f4a-2e747bc99c25"
+    },
+    {
+      "contentElementTypeKey": "ccfca48c-f811-42a7-ad1a-fc74d4ec9b7c"
     }
   ]
 }]]></Config>
