Complete About page styling: CEO section with image caption, review section with proper layout, asymmetric team grid (3+4), and contact info section with beige background

--- a/uSync/v16/Content/about.config
+++ b/uSync/v16/Content/about.config
@@ -57,7 +57,7 @@
               "expose": [],
               "Layout": {}
             },
-            "markup": "\u003Cp\u003E\u003Cspan\u003EWe have over 25 years of experience providing expert financial advice to both businesses and individuals.\u0022 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. Morbi commodo, eros quis consequat consequat, orci lacus auctor ligula, ut maximus arcu sapien nec elit. Suspendisse rutrum. Cras auctor, dui eu eleifend malesuada, nunc dui pretium urna, id euismod orci urna non erat. Pellentesque imperdiet tortor ut elementum viverra. Phasellus laoreet, sapien id euismod hendrerit, nibh ligula hendrerit libero, sit amet hendrerit elit turpis nec velit. Praesent tincidunt nisl et metus vulputate ornare. Morbi commodo, eros quis consequat consequat, orci lacus auctor ligula, ut maximus arcu sapien nec elit. Suspendisse rutrum elit at urna dapibus viverra. Etiam lectus libero, condimentum eget justo ac, accumsan suscipit libero. Morbi commodo, eros quis consequat consequat, orci lacus auctor ligula, ut maximus arcu sapien nec elit. Suspendisse rutrum. I commodo, eros quis consequat consequat. Cras auctor, dui eu eleifend malesuada, nunc dui pretium urna, id euismod orci urna non erat. Pellentesque imperdiet tortor ut elementum viverra. Cras auctor, dui eu eleifend malesuada, nunc dui pretium urna, id euismod orci urna non erat. Pellentesque imperdiet tortor ut elementum viverra. Tina Fox - CEO \u0026amp; Founder at Onatrix\u003C/span\u003E\u003C/p\u003E"
+            "markup": "\u003Cp\u003E\u003Cspan\u003EWe have over 25 years of experience providing expert financial advice to both businesses and individuals.\u0022 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. Morbi commodo, eros quis consequat consequat, orci lacus auctor ligula, ut maximus arcu sapien nec elit. Suspendisse rutrum. Cras auctor, dui eu eleifend malesuada, nunc dui pretium urna, id euismod orci urna non erat. Pellentesque imperdiet tortor ut elementum viverra. Phasellus laoreet, sapien id euismod hendrerit, nibh ligula hendrerit libero, sit amet hendrerit elit turpis nec velit. Praesent tincidunt nisl et metus vulputate ornare. Morbi commodo, eros quis consequat consequat, orci lacus auctor ligula, ut maximus arcu sapien nec elit. Suspendisse rutrum elit at urna dapibus viverra. Etiam lectus libero, condimentum eget justo ac, accumsan suscipit libero. Morbi commodo, eros quis consequat consequat, orci lacus auctor ligula, ut maximus arcu sapien nec elit. Suspendisse rutrum. I commodo, eros quis consequat consequat. Cras auctor, dui eu eleifend malesuada, nunc dui pretium urna, id euismod orci urna non erat. Pellentesque imperdiet tortor ut elementum viverra. Cras auctor, dui eu eleifend malesuada, nunc dui pretium urna, id euismod orci urna non erat. Pellentesque imperdiet tortor ut elementum viverra. \u003C/span\u003E\u003C/p\u003E"
           }
         },
         {
@@ -68,6 +68,13 @@
           "value": [
             "Left"
           ]
+        },
+        {
+          "alias": "imageCaption",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "Tina Fox - CEO \u0026 Founder at Onatrix"
         }
       ]
     },
