--- a/uSync/v16/ContentTypes/imagetextsectionblock.config
+++ b/uSync/v16/ContentTypes/imagetextsectionblock.config
@@ -22,6 +22,22 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
+      <Key>d91d1514-a649-4cb6-b14f-ee4d16f9f7c5</Key>
+      <Name>Image Caption</Name>
+      <Alias>imageCaption</Alias>
+      <Definition>0cc0eba1-9960-42c9-bf9b-60e150b429ae</Definition>
+      <Type>Umbraco.TextBox</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[Name/caption under image (e.g. "Tina Fox - CEO & Founder")]]></Description>
+      <SortOrder>4</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>770152fb-073e-46f3-a2d6-aa5a62193be1</Key>
       <Name>Image Position</Name>
       <Alias>imagePosition</Alias>
