Complete About page styling: CEO section with image caption, review section with proper layout, asymmetric team grid (3+4), and contact info section with beige background

--- a/uSync/v16/Content/services.config
+++ b/uSync/v16/Content/services.config
@@ -35,7 +35,7 @@
           "culture": null,
           "editorAlias": null,
           "segment": null,
-          "value": "Our Services"
+          "value": "We Provide The Solutions To Grow Your Business Faster"
         },
         {
           "alias": "services",
@@ -346,20 +346,6 @@
       ]
     },
     {
-      "contentTypeKey": "060487d1-2e92-48c6-9ecd-2b275ff972cb",
-      "key": "caf1974f-475e-4e9e-9503-0c303fc07ba1",
-      "udi": null,
-      "values": [
-        {
-          "alias": "headline",
-          "culture": null,
-          "editorAlias": null,
-          "segment": null,
-          "value": "We Provide The Solutions To Grow Your Business Faster"
-        }
-      ]
-    },
-    {
       "contentTypeKey": "4080e05a-9a1f-490d-beef-de74e5bdc0c0",
       "key": "e42c3f93-4ec8-4dc1-8470-2d069d9a76d3",
       "udi": null,
@@ -401,7 +387,7 @@
             {
               "key": "6ad3c03d-a88c-4449-a04b-de77f203540d",
               "mediaKey": "03f811cf-50d4-42ee-865b-19d46a40ac28",
-              "mediaTypeAlias": "",
+              "mediaTypeAlias": "Image",
               "crops": [],
               "focalPoint": null
             }
@@ -416,7 +402,7 @@
             {
               "key": "419e3a2a-2866-4aa7-bdac-2303cfa62ced",
               "mediaKey": "261f9f91-817a-4bc3-976d-c03727e22bba",
-              "mediaTypeAlias": "",
+              "mediaTypeAlias": "Image",
               "crops": [],
               "focalPoint": null
             }
@@ -433,11 +419,6 @@
       "segment": null
     },
     {
-      "contentKey": "caf1974f-475e-4e9e-9503-0c303fc07ba1",
-      "culture": null,
-      "segment": null
-    },
-    {
       "contentKey": "e42c3f93-4ec8-4dc1-8470-2d069d9a76d3",
       "culture": null,
       "segment": null
@@ -445,12 +426,6 @@
   ],
   "Layout": {
     "Umbraco.BlockList": [
-      {
-        "contentKey": "caf1974f-475e-4e9e-9503-0c303fc07ba1",
-        "contentUdi": null,
-        "settingsKey": null,
-        "settingsUdi": null
-      },
       {
         "contentKey": "a084252b-f6ed-46de-b54b-ab1e504023b1",
         "contentUdi": null,
